<resources>
    <string name="app_name">Zapotec</string>
    <string name="zapotec">Zapotec Pronounced By</string>
    <string name="def">Definition</string>
    <string name="wordDef">Word Definition</string>
    <string name="pic">Picture</string>
    <string name="subtitle_search">Search</string>
    <string name="subtitle_history">History</string>
    <string name="subtitle_settings">Settings</string>
    <string name="subtitle_word_of_day">WordOfDay</string>
    <string name="update_options">Update Options</string>
    <string name="update_content_only">Text Only(No Audio)</string>
    <string name="update_min_content_audio">Text and Minimized Audio</string>
    <string name="update_min_content_audio_pic">Text, Minimized Audio and Images</string>
    <string name="update_full">Text, Full Audio and Images</string>
    <string name="write_perm_error">Cannot access local storage</string>
    <string name="arrow">&#8227;</string>
    <string name="developers">This app is developed by Zhanpeng Wang, Jiaping Wang from Haverford College, and Eileen Feng, Ju Han Tarn from Bryn Mawr College.</string>
    <string name="documentation">This is a dictionary app for people to learn Tlacochahuaya, an endangered Zapotec dialect. </string>
    <string name="features">Features:
        <br>1. Randomly selected words upon each start</br>
        <br>2. Allow users to search in English/Spanish/Zapotec</br>
        <br>3. Maintain users’ search history</br>
        <br>4. Customized download options</br>
    </string>
    <string name="copyright">&#xa9; 2018 Zhanpeng Wang, Elieen Feng, Jiaping Wang, Ju Han Tarn</string>
</resources>
