<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchWords_fatherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E6E0"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/searchWords_searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Look Up" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="Word"
                android:textSize="40dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/searchWords_posE_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:paddingLeft="20dp">

            <ImageButton
                android:id="@+id/searchWords_voiceE"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/voice" />

            <TextView
                android:id="@+id/searchWords_psE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="5dp"
                android:paddingBottom="7dp"
                android:text="@string/zapotec"
                android:textColor="#3B3C3D"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/def"
                    android:textSize="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/searchWords_posAcceptation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/wordDef"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="20dp"
                    android:text="@string/pic"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/Zapotec" />

            </LinearLayout>
        </LinearLayout>
</LinearLayout>
